--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,19 @@
             <id>com.github.psambit9791</id>
             <url>https://github.com/psambit9791/jdsp</url>
         </repository>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Sonatype Nexus Staging</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </repositories>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>net.imagej</groupId>
@@ -38,10 +44,14 @@
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
-            <artifactId>javacv</artifactId>
-            <version>1.5</version>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.10</version> <!-- Use a consistent version -->
         </dependency>
-
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>opencv-platform</artifactId>
+            <version>4.9.0-1.5.10</version> <!-- Use this version -->
+        </dependency>
     </dependencies>
 
 </project>
