--- a/pom.xml
+++ b/pom.xml
@@ -43,23 +43,23 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>openblas-platform</artifactId>
+            <version>0.3.26-1.5.10</version>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
-            <artifactId>javacv</artifactId>
+            <artifactId>javacv-platform</artifactId>
             <version>1.5.10</version>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
-            <artifactId>opencv</artifactId>
+            <artifactId>opencv-platform</artifactId>
             <version>4.9.0-1.5.10</version>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
-            <artifactId>javacpp</artifactId>
+            <artifactId>javacpp-platform</artifactId>
             <version>1.5.10</version>
         </dependency>
     </dependencies>
