--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>1.54f</version>
         </dependency>
         <dependency>
+            <groupId>io.github.joheras</groupId>
+            <artifactId>IJ-OpenCV</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.opencb.commons</groupId>
             <artifactId>bioformats</artifactId>
             <version>2.0.0</version>
@@ -48,24 +53,29 @@
             <version>0.3.26-1.5.10</version>
         </dependency>
         <dependency>
-            <groupId>org.bytedeco</groupId>
-            <artifactId>javacv-platform</artifactId>
-            <version>1.5.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bytedeco</groupId>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>opencv-platform</artifactId>
-            <version>4.9.0-1.5.10</version>
+            <version>3.4.2-1.4.2</version>
         </dependency>
         <dependency>
-            <groupId>org.bytedeco</groupId>
-            <artifactId>javacpp-platform</artifactId>
-            <version>1.5.10</version>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.4.2-1.4.2</version>
         </dependency>
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scijava</groupId>
+            <artifactId>scijava-common</artifactId>
+            <version>2.97.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.stardist</groupId>
+            <artifactId>stardist-imagej</artifactId>
+            <version>0.3.0</version>
         </dependency>
     </dependencies>
 
