--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,6 @@
     <artifactId>MultiCellTB</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <repositories>
-        <repository>
-            <id>com.github.psambit9791</id>
-            <url>https://github.com/psambit9791/jdsp</url>
-        </repository>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <name>Sonatype Nexus Staging</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </repositories>
-
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -33,34 +21,14 @@
             <version>1.54f</version>
         </dependency>
         <dependency>
-            <groupId>io.github.joheras</groupId>
-            <artifactId>IJ-OpenCV</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.opencb.commons</groupId>
             <artifactId>bioformats</artifactId>
             <version>2.0.0</version>
         </dependency>
         <dependency>
-            <groupId>com.github.psambit9791</groupId>
-            <artifactId>jdsp</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.bytedeco</groupId>
-            <artifactId>openblas-platform</artifactId>
-            <version>0.3.26-1.5.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>opencv-platform</artifactId>
-            <version>3.4.2-1.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>opencv</artifactId>
-            <version>3.4.2-1.4.2</version>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.10</version>
         </dependency>
         <dependency>
             <groupId>org.jfree</groupId>
@@ -73,10 +41,9 @@
             <version>2.97.0</version>
         </dependency>
         <dependency>
-            <groupId>com.github.stardist</groupId>
-            <artifactId>stardist-imagej</artifactId>
-            <version>0.3.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
         </dependency>
     </dependencies>
-
 </project>
